// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CdrUtilitySans > default configuration > renders correctly 1`] = `
<p
  class="cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale-1); --cdr-utility-sans-line-height: var(--cdr-line-height-ratio-utility-1); --cdr-utility-sans-font-weight: 400;"
>
  
  paragraph
  
</p>
`;

exports[`CdrUtilitySans > passing a scale > renders correctly 1`] = `
<p
  class="cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale--1); --cdr-utility-sans-line-height: var(--cdr-line-height-ratio-utility--1); --cdr-utility-sans-font-weight: 400;"
>
  
  paragraph
  
</p>
`;

exports[`CdrUtilitySans > setting to strong variant > renders correctly 1`] = `
<p
  class="cdr-utility-sans"
  style="--cdr-utility-sans-font-size: var(--cdr-type-scale-1); --cdr-utility-sans-line-height: var(--cdr-line-height-ratio-utility-1); --cdr-utility-sans-font-weight: 600;"
>
  
  paragraph
  
</p>
`;
